--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION_TEST=mysql
+DB_HOST_TEST=127.0.0.1
+DB_PORT_TEST=3306
+DB_DATABASE_TEST=my_test_database
+DB_USERNAME_TEST=root
+DB_PASSWORD_TEST=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
